Saved O.W. Forum sample

--- a/Codebook.ipynb
+++ b/Codebook.ipynb
@@ -227,8 +227,21 @@
     "df.column = df.column.map(lambda x: np.nan if x == '?' else float(x))\n",
     "\n",
     "# Uses.map() to turn commas into periods & convert into floats:\n",
-    "df.column = df.column.map(lambda x: float(x.replace(',','.')))"
+    "df.column = df.column.map(lambda x: float(x.replace(',','.')))\n",
+    "\n",
+    "# Uses .map() through a function with a string example\n",
+    "def map_function(row):\n",
+    "    listed = row.split('\\n')\n",
+    "    return listed[0]\n",
+    "df['column_new'] = df['column_old'].map(lambda x: map_function(x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
