--- a/Function Lab.ipynb
+++ b/Function Lab.ipynb
@@ -1,6 +1,180 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_percent(df):\n",
+    "    total_rows,total_columns = df.shape\n",
+    "    dropped_rows, dropped_columns = df.dropna().shape\n",
+    "    return\"Percentage of rows remaining, post-drop = {}\".format(dropped_rows/total_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is meerly the starter code.  Use this as a jumping off point.\n",
+    "def clean(df):\n",
+    "    df_cleaned = df.drop(['Alley','Fireplace Qu','Pool QC','Fence','Misc Feature'], axis = 1)\n",
+    "    df_cleaned.fillna(0, inplace=True)\n",
+    "    df_cleaned = pd.get_dummies(df_cleaned)\n",
+    "    return df_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print pairplots with just the target\n",
+    "sns.pairplot(data=train_df,\n",
+    "            x_vars=['Loan_Status_Y'],\n",
+    "            y_vars=['ApplicantIncome', 'CoapplicantIncome', 'LoanAmount',\n",
+    "       'Loan_Amount_Term', 'Credit_History', 'Gender_Female', 'Married_Yes',\n",
+    "       'Dependents_1', 'Dependents_2', 'Dependents_3+', 'Education_Graduate',\n",
+    "       'Self_Employed_Yes', 'Property_Area_Rural', 'Property_Area_Semiurban',\n",
+    "       'Property_Area_Urban'],size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def target_pairplots(df, target, list_of_variables, size = 10):\n",
+    "    return sns.pairplot(data   = df,\n",
+    "                        x_vars = [target],\n",
+    "                        y_vars = list_of_variables, \n",
+    "                        height = size);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class task:\n",
+    "    def start(task = 'string'):\n",
+    "        if #clock counting\n",
+    "            #print(you already started it, chick)\n",
+    "            #return \"you are currently working on:\" task\n",
+    "        #begin clock count\n",
+    "        \n",
+    "    def check:\n",
+    "        return #current time spent on task\n",
+    "    \n",
+    "    def stop:\n",
+    "        #stops clock\n",
+    "        return #start time - stop time"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,60 +277,6 @@
     "\"Without depression, we ask a lot of questions\"\n",
     "\"We're at our most independent\"\n",
     "\"We can focus on ourselves and others at appropriate times\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def drop_percent(df):\n",
-    "    total_rows,total_columns = df.shape\n",
-    "    dropped_rows, dropped_columns = df.dropna().shape\n",
-    "    return\"Percentage of rows remaining, post-drop = {}\".format(dropped_rows/total_rows)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class task:\n",
-    "    def start(task = 'string'):\n",
-    "        if #clock counting\n",
-    "            #print(you already started it, chick)\n",
-    "            #return \"you are currently working on:\" task\n",
-    "        #begin clock count\n",
-    "        \n",
-    "    def check:\n",
-    "        return #current time spent on task\n",
-    "    \n",
-    "    def stop:\n",
-    "        #stops clock\n",
-    "        return #start time - stop time"
    ]
   }
  ],
