--- a/Seed Projects/Project Starter Notebook.ipynb
+++ b/Seed Projects/Project Starter Notebook.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as np\n",
+    "import pandas as pd\n",
     "import matplotlib as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
@@ -256,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
